# Head

- Added an inlined_blank type, which is sometimes like a zero, and sometimes like an empty string
- String join in the ruby compilation treates zeros that are blank differently from zeros
- Added an isolate attribute to excel_to_x to help debugging large worksheets: if set, only one sheet is translated
- Now prints more informative error messages if fails to compile a 'common' element
- Changed order of array replacement
- Ruby version of LEN now distinguishes zeros that are blank from zeros that are not
- References to blank cells now return 0 not blank
- Fix for SUMIF different sized ranges when fixed references are used
- Parser now picks up external named references
- Added a workaround for brackets not being removed in some cases
- The ruby version of IF() now treats 0 as false and all other numbers as true 
- SUMIF and SUMIFS can now cope with being passed ranges for the criteria
- Fixed formula parser to cope with comparisons with string joins
- Fixed bug in C compilation when specifying :all cells in a sheet are settable
- Switched off warnings in default C build script

# 0.2.15 - 2013 February 6th

- SUMIF now copes with criteria ranges that are different in size from sum ranges
- Optional attribute on excel_to_x: extract_repeated_parts_of_formulae. Setting it to false may make it easier to localise errors
- Generated C code now has C if statements, so that there is no need to evaluate both the true and the false case
- OFFSET replacement now deals with errors in arguments
- Reworked the way that ranges are dealt with when cells are expected (may not be right)

# 0.2.14 - 2013 February 4th

- Optimised the array formula expansion a tiny bit
- Aborts earlier if unable to replace a ROW or COLUMN function
- When inlining, don't inline into a COLUMN or ROW function

# 0.2.13 - 2013 February 3rd

- Now fails earlier if external references are found
- Extra logging messages when expanding array formulae

# 0.2.12 - 2013 February 3rd
