@@ -1,0 +1,7 @@
+module ExcelFunctions
+  
+  def ensure_is_number(a)
+    return number_argument(a)
+  end
+  
+end
